--- a/src/components/modals/modals.css
+++ b/src/components/modals/modals.css
@@ -30,15 +30,32 @@
   align-items: center;
   padding: 0.5rem;
 }
-.modal-container > button {
+.modal-container > .close-modal-button {
   position: fixed;
   top: 0;
   right: 0;
 }
+.modal-container > h1 {
+  margin-top: 1.25rem;
+}
+.modal-inputs-container {
+  display: flex;
+  flex-direction: column;
+}
+.modal-container > .create-new-channel-button {
+  margin-top: 0.75rem;
+}
 .add-channel-input {
-  width: 90%;
+  width: 40ch;
   height: 2rem;
   padding: 0.25rem 0.5rem;
   color: white;
   font-size: 1rem;
+  margin-top: 0.5rem;
+}
+span {
+  width: 100%;
+}
+.add-channel-input::placeholder {
+  font-size: 0.8rem;
 }
