--- a/src/components/messaging/messaging.css
+++ b/src/components/messaging/messaging.css
@@ -1,8 +1,34 @@
 .messaging-container {
-  width: 100%;
+  width: 95%;
   height: 20vh;
-  border-top: 2px solid black;
+  border: 2px solid black;
+  border-radius: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 0.75rem;
+}
+.messaging-container > header,
+.messaging-container > footer {
+  display: flex;
+  width: 100%;
+  height: 25%;
+  justify-content: space-around;
+}
+.messaging-container > main {
+  height: 50%;
+  width: 100%;
+}
+.messaging-container > header {
+  border-bottom: 2px solid black;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+  font-size: 1.25rem;
+  padding-left: 1rem;
+}
+.messaging-container > footer {
+  border-top: 2px solid black;
 }
