--- a/src/components/messages/messages.css
+++ b/src/components/messages/messages.css
@@ -1,1 +1,57 @@
-
+.messages-container {
+  height: calc(100vh - 20vh - 0.75rem);
+  width: 100%;
+}
+.receiver-name {
+  width: 100%;
+  height: 7vh;
+  border-bottom: 2px solid black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0.5rem;
+}
+.direct-messages {
+  padding: 0.25rem 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: calc(70vh + 0.75rem);
+}
+.direct-messages li {
+  list-style: none;
+}
+.direct-message-details {
+  display: flex;
+  justify-content: flex-start;
+  align-content: center;
+  width: 100%;
+  height: 4vh;
+  gap: 0.5rem;
+}
+.direct-message-details > img {
+  width: 35px;
+  height: 35px;
+}
+.direct-message-details > h6 {
+  padding-top: 0.5rem;
+  opacity: 0.7;
+}
+.direct-message-body-container {
+  margin-bottom: 1rem;
+  margin-left: calc(35px + 0.5rem);
+}
+.direct-message-body {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem;
+}
+.direct-message-body > h6 {
+  padding-top: 0.25rem;
+  opacity: 0;
+  transition: opacity 250ms ease-out;
+}
+.direct-message-body:hover > h6 {
+  opacity: 0.7;
+  transition: opacity 250ms ease-in;
+}
