--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -1,19 +1,23 @@
 .side-bar-container {
-  width: 15vw;
+  width: 20vw;
   height: 100%;
   position: relative;
 }
-.server-name {
+.server-header {
   height: 7vh;
   width: 100%;
   border-bottom: 2px solid black;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 .logout-button {
   position: absolute;
   bottom: 0.5rem;
   left: 0.5rem;
+  cursor: pointer;
+}
+.new-message-button {
+  font-size: 1.5rem;
   cursor: pointer;
 }
