--- a/src/components/channelMessages/channelMessages.css
+++ b/src/components/channelMessages/channelMessages.css
@@ -8,7 +8,7 @@
 .channel-name {
   width: 100%;
   height: 7vh;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid antiquewhite;
   display: flex;
   justify-content: space-between;
   align-items: center;
