--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -5,6 +5,7 @@
   align-items: center;
   width: calc(60vw - 4px);
   height: 100%;
-  border-left: 2px solid black;
-  border-right: 2px solid black;
+  border-left: 2px solid antiquewhite;
+  border-right: 2px solid antiquewhite;
+  background-color: rgb(55, 0, 55);
 }
