--- a/src/components/messages/messages.css
+++ b/src/components/messages/messages.css
@@ -5,7 +5,7 @@
 .receiver-name {
   width: 100%;
   height: 7vh;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid antiquewhite;
   display: flex;
   justify-content: space-between;
   align-items: center;
