--- a/src/components/messaging/messaging.css
+++ b/src/components/messaging/messaging.css
@@ -1,13 +1,14 @@
 .messaging-container {
   width: 95%;
   height: 20vh;
-  border: 2px solid black;
+  border: 2px solid antiquewhite;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: 0.75rem;
+  background-color: rgba(43, 0, 43);
 }
 .messaging-container > header,
 .messaging-container > footer {
@@ -24,7 +25,7 @@ header > .message-formatter {
   width: 100%;
 }
 .messaging-container > header {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid antiquewhite;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -33,7 +34,7 @@ header > .message-formatter {
   padding-left: 1rem;
 }
 .messaging-container > footer {
-  border-top: 2px solid black;
+  border-top: 2px solid antiquewhite;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -46,6 +47,8 @@ header > .message-formatter {
   outline: none;
   padding: 0.25rem 0.5rem;
   font-size: 1rem;
+  background-color: rgba(53, 0, 53);
+  color: antiquewhite;
 }
 footer > .send-message-button {
   cursor: pointer;
@@ -53,6 +56,7 @@ footer > .send-message-button {
   width: 3rem;
   font-size: 1.75rem;
   border-radius: 8px;
-  background-color: rgb(88, 129, 88);
+  /* background-color: rgb(88, 129, 88); */
+  background-color: rgba(53, 0, 53);
   padding: 0.1rem 0;
 }
