--- a/src/components/newMemberModal/newMemberModal.css
+++ b/src/components/newMemberModal/newMemberModal.css
@@ -1,4 +1,4 @@
-.add-channel-modal {
+.add-member-modal {
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -13,7 +13,7 @@
   position: relative;
   backdrop-filter: blur(3px);
 }
-.modal-container {
+.new-member-modal-container {
   position: absolute;
   z-index: 1;
   top: 50%;
@@ -31,24 +31,24 @@
   padding: 0.5rem;
   color: rgb(55, 0, 55);
 }
-.modal-container > .close-modal-button {
+.new-member-modal-container > .close-modal-button {
   position: fixed;
   top: 0;
   right: 0;
 }
-.modal-container > h1 {
+.new-member-modal-container > h1 {
   margin-top: 1.25rem;
 }
-.modal-inputs-container {
+.new-member-modal-inputs-container {
   display: flex;
   flex-direction: column;
 }
-.modal-container > .create-new-channel-button {
+.new-member-modal-container > .add-new-member-button {
   margin-top: 0.75rem;
   background-color: rgb(55, 0, 55);
   color: antiquewhite;
 }
-.add-channel-input {
+.add-member-input {
   width: 40ch;
   height: 2rem;
   padding: 0.25rem 0.5rem;
@@ -60,6 +60,6 @@
 span {
   width: 100%;
 }
-.add-channel-input::placeholder {
+.add-member-input::placeholder {
   font-size: 0.8rem;
 }
