--- a/src/components/searchForm/searchForm.css
+++ b/src/components/searchForm/searchForm.css
@@ -4,7 +4,7 @@
   align-items: center;
   gap: 0.5rem;
   height: 7vh;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid antiquewhite;
 }
 .search-input {
   width: 30ch;
