--- a/src/pages/main-page/mainPage.css
+++ b/src/pages/main-page/mainPage.css
@@ -12,3 +12,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.add-member-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
