--- a/src/pages/sign-in-page/signInPage.css
+++ b/src/pages/sign-in-page/signInPage.css
@@ -1,3 +1,14 @@
+.sign-in-page {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../../assets/hands.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .sign-in-container,
 .form-container,
 .sign-in-inputs-container {
@@ -28,7 +39,7 @@
   height: 600px;
   border-radius: 10px;
   padding: 0.5rem 1rem;
-  background-color: rgba(0, 49, 114, 0.829);
+  background-color: rgba(0, 49, 114, 0.938);
 }
 .sign-in-container > img {
   height: 8rem;
@@ -45,6 +56,7 @@
   height: 2rem;
   padding: 0.25rem 0.75rem;
   font-size: 1rem;
+  color: black;
 }
 .sign-in-button {
   width: 15ch;
@@ -55,12 +67,7 @@
 }
 .invalid {
   display: block;
-  /* visibility: visible; */
-  /* opacity: 1; */
-  /* transition: visibility 300ms ease-in; */
 }
 .valid {
   display: none;
-  /* visibility: hidden; */
-  /* opacity: 0; */
 }
