--- a/src/pages/sign-up-page/signUpPage.css
+++ b/src/pages/sign-up-page/signUpPage.css
@@ -1,3 +1,13 @@
+.sign-up-page {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("../../assets/hands.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 .sign-up-container,
 .form-container,
 .sign-up-inputs-container {
@@ -28,7 +38,7 @@
   height: 600px;
   border-radius: 10px;
   padding: 0.5rem 1rem;
-  background-color: rgba(0, 49, 114, 0.829);
+  background-color: rgba(0, 49, 114, 0.938);
 }
 .sign-up-container > img {
   height: 6rem;
@@ -45,6 +55,7 @@
   height: 2rem;
   padding: 0.25rem 0.75rem;
   font-size: 1rem;
+  color: black;
 }
 span {
   width: 50ch;
