completed all required core functionalities and will do code cleaning next

--- a/src/components/channel/channel.css
+++ b/src/components/channel/channel.css
@@ -8,9 +8,6 @@
   border-bottom: 2px solid antiquewhite;
   padding: 0.5rem 0.75rem;
 }
-.channel-header > h3 {
-  cursor: pointer;
-}
 .channel-header > i {
   height: 2vh;
   font-size: 1.25rem;
@@ -34,4 +31,5 @@
 .channel-list-container li {
   list-style: none;
   cursor: pointer;
+  color: antiquewhite;
 }
