--- a/src/components/channelMessages/channelMessages.css
+++ b/src/components/channelMessages/channelMessages.css
@@ -2,9 +2,6 @@
   height: calc(100vh - 20vh - 0.75rem);
   width: 100%;
 }
-.channel-messages {
-  padding: 0.25rem 0.5rem;
-}
 .channel-name {
   width: 100%;
   height: 7vh;
@@ -13,4 +10,48 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 0.5rem;
+}
+.channel-messages {
+  padding: 0.25rem 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: calc(70vh + 0.75rem);
+}
+.channel-messages li {
+  list-style: none;
+}
+.channel-message-details {
+  display: flex;
+  justify-content: flex-start;
+  align-content: center;
+  width: 100%;
+  height: 4vh;
+  gap: 0.5rem;
+}
+.channel-message-details > img {
+  width: 35px;
+  height: 35px;
+}
+.channel-message-details > h6 {
+  padding-top: 0.5rem;
+  opacity: 0.7;
+}
+.channel-message-body-container {
+  margin-bottom: 1rem;
+  margin-left: calc(35px + 0.5rem);
+}
+.channel-message-body {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem;
+}
+.channel-message-body > h6 {
+  padding-top: 0.25rem;
+  opacity: 0;
+  transition: opacity 250ms ease-out;
+}
+.channel-message-body:hover > h6 {
+  opacity: 0.7;
+  transition: opacity 250ms ease-in;
 }
