--- a/src/pages/sign-in-page/signInPage.css
+++ b/src/pages/sign-in-page/signInPage.css
@@ -39,7 +39,7 @@
   height: 600px;
   border-radius: 10px;
   padding: 0.5rem 1rem;
-  background-color: rgba(0, 49, 114, 0.938);
+  background-color: rgba(53, 0, 53);
 }
 .sign-in-container > img {
   height: 8rem;
@@ -60,6 +60,16 @@
 }
 .sign-in-button {
   width: 15ch;
+  color: rgba(53, 0, 53);
+  background-color: white;
+  border-color: black;
+  transition: color, background-color, 200ms ease-out;
+}
+.sign-in-button:hover {
+  color: white;
+  background-color: rgba(53, 0, 53);
+  border-color: white;
+  transition: color, background-color, 200ms ease-in;
 }
 .invalid,
 .valid {
