--- a/src/pages/sign-up-page/signUpPage.css
+++ b/src/pages/sign-up-page/signUpPage.css
@@ -2,7 +2,8 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   background-image: url("../../assets/hands.jpg");
   background-size: cover;
@@ -17,7 +18,7 @@
 }
 .sign-up-container,
 .sign-up-input {
-  border: 2px solid black;
+  border: 2px solid rgba(53, 0, 53);
 }
 .sign-up-container,
 .form-container {
@@ -33,12 +34,19 @@
 .sign-up-inputs-container > label {
   margin-top: 1.5rem;
 }
-
+.sign-up-page > nav {
+  border-radius: 30px;
+  border: 2px solid rgba(53, 0, 53);
+  width: 85%;
+  margin-top: 1rem;
+  background-color: rgba(255, 255, 255, 0.5);
+}
 .sign-up-container {
   height: 600px;
   border-radius: 10px;
   padding: 0.5rem 1rem;
-  background-color: rgba(0, 49, 114, 0.938);
+  background-color: rgba(53, 0, 53);
+  margin-bottom: 2rem;
 }
 .sign-up-container > img {
   height: 6rem;
@@ -64,6 +72,16 @@ span {
 }
 .sign-up-button {
   width: 15ch;
+  color: rgba(53, 0, 53);
+  background-color: white;
+  border-color: black;
+  transition: color, background-color, 200ms ease-out;
+}
+.sign-up-button:hover {
+  color: white;
+  background-color: rgba(53, 0, 53);
+  border-color: white;
+  transition: color, background-color, 200ms ease-in;
 }
 .invalid,
 .valid {
@@ -71,12 +89,7 @@ span {
 }
 .invalid {
   display: block;
-  /* visibility: visible; */
-  /* opacity: 1; */
-  /* transition: visibility 300ms ease-in; */
 }
 .valid {
   display: none;
-  /* visibility: hidden; */
-  /* opacity: 0; */
 }
