--- a/src/components/users/users.css
+++ b/src/components/users/users.css
@@ -10,6 +10,9 @@
   border-bottom: 2px solid antiquewhite;
   padding: 0.5rem 0.75rem;
 }
+.users-header > div > h5 {
+  opacity: 0.8;
+}
 .users-header > i {
   height: 2vh;
   cursor: pointer;
