--- a/src/pages/sign-in-page/signInPage.css
+++ b/src/pages/sign-in-page/signInPage.css
@@ -41,7 +41,7 @@
 }
 .sign-in-container > img {
   height: 8rem;
-  scale: 1.5;
+  scale: 1.3;
   padding: 0.5rem 0;
   margin-top: -1rem;
 }
@@ -67,6 +67,11 @@
   color: white;
   background-color: rgba(53, 0, 53);
 }
+.sign-in-inputs ~ span {
+  width: 50ch;
+  color: red;
+  display: none;
+}
 .sign-in-button {
   width: 15ch;
   color: rgba(53, 0, 53);
@@ -88,5 +93,25 @@
   display: block;
 }
 .valid {
+  display: none;
+}
+.sign-in-inputs-container {
+  position: relative;
+}
+.visible {
+  position: absolute;
+  bottom: -5.35rem;
+  right: 1rem;
+  color: white;
+  cursor: pointer;
+  z-index: 1;
+}
+.invisible {
+  position: absolute;
+  bottom: -5.35rem;
+  right: 1rem;
+  color: white;
+  cursor: pointer;
+  z-index: 1;
   display: none;
 }
