--- a/src/components/channel/channel.css
+++ b/src/components/channel/channel.css
@@ -32,4 +32,9 @@
   list-style: none;
   cursor: pointer;
   color: antiquewhite;
+  margin-bottom: 0.5rem;
+}
+.channel-list-container li:hover {
+  background-color: rgb(93, 0, 93, 0.5);
+  font-weight: 900;
 }
