--- a/src/components/messages/messages.css
+++ b/src/components/messages/messages.css
@@ -46,6 +46,9 @@
   align-items: center;
   gap: 0.5rem;
 }
+.direct-message-body > h4 {
+  word-break: break-all;
+}
 .direct-message-body > h6 {
   padding-top: 0.25rem;
   opacity: 0;
