--- a/src/components/searchForm/searchForm.css
+++ b/src/components/searchForm/searchForm.css
@@ -7,12 +7,13 @@
   border-bottom: 2px solid antiquewhite;
 }
 .search-input {
-  width: 30ch;
+  width: 100%;
   height: 2rem;
   background-color: rgb(255, 255, 255, 0.3);
   border-radius: 5px;
   color: white;
   padding: 0.25rem 0.75rem;
+  margin-left: 0.5rem;
 }
 .search-input::placeholder {
   color: rgb(255, 255, 255, 0.5);
